--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
 
 <!-- Header Start -->
 
-<header class="navigation">
-	<div class="header-top ">
+<header class="navigation" id="home">
+	<div class="header-top">
 		<div class="container">
 			<div class="row justify-content-between align-items-center">
 				<div class="col-lg-6 col-md-4 text-center text-lg-left text-md-left">
@@ -62,7 +62,7 @@
 						<a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
 						<!-- <a href="#" target="_blank"><i class="fab fa-pinterest-p"></i></a> -->
 						<!-- <a href="#" target="_blank"><i class="fab fa-linkedin"></i></a> -->
-						<a href="https://demo.themefisher.com/wishfund/donation.html" class="top-btn">Donate Now</a>
+						<a href="#" class="top-btn">Donate Now</a>
 					</div>
 				</div>
 			</div>
@@ -92,22 +92,22 @@
 		  <div class="collapse navbar-collapse text-center" id="navbarsExample09">
 			<ul class="navbar-nav ml-auto">
 			  <li class="nav-item active">
-				<a class="nav-link" href="https://demo.themefisher.com/wishfund/index.html">Home <span class="sr-only">(current)</span></a>
+				<a class="nav-link" href="#home">Home <span class="sr-only">(current)</span></a>
 			  </li>
-			   <li class="nav-item"><a class="nav-link" href="https://demo.themefisher.com/wishfund/about.html">About</a></li>
+			   <li class="nav-item"><a class="nav-link" href="#about">About</a></li>
 			  <li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="https://demo.themefisher.com/wishfund/#" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Causes<span class="ml-1">+</span></a>
+					<a class="nav-link dropdown-toggle" href="#causes" id="dropdown03" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Causes<span class="ml-1">+</span></a>
 					<ul class="dropdown-menu" aria-labelledby="dropdown03">
-						<li><a class="dropdown-item" href="https://demo.themefisher.com/wishfund/service.html">Causes</a></li>
-						<li><a class="dropdown-item" href="https://demo.themefisher.com/wishfund/cause-single.html">Cause details</a></li>
+						<li><a class="dropdown-item" href="#causes">Causes</a></li>
+						<li><a class="dropdown-item" href="#cause details">Cause details</a></li>
 					</ul>
 			  </li>
 
   				<li class="nav-item dropdown">
-					<a class="nav-link dropdown-toggle" href="https://demo.themefisher.com/wishfund/#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Get Involved<span class="ml-1">+</span></a>
+					<a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Get Involved<span class="ml-1">+</span></a>
 					<ul class="dropdown-menu" aria-labelledby="dropdown04">
-						<li><a class="dropdown-item" href="https://demo.themefisher.com/wishfund/donation.html">Donation</a></li>
-						<li><a class="dropdown-item" href="https://demo.themefisher.com/wishfund/volunteer.html">Be a Member </a></li>
+						<li><a class="dropdown-item" href="#donation">Donation</a></li>
+						<li><a class="dropdown-item" href="#be a Member">Be a Member</a></li>
 					</ul>
 			  </li>
 
@@ -129,7 +129,7 @@
 						<li><a class="dropdown-item" href="https://demo.themefisher.com/wishfund/blog-single.html">Blog Single</a></li>
 					</ul>
 			  </li> -->
-			   <li class="nav-item"><a class="nav-link" href="https://demo.themefisher.com/wishfund/contact.html">Contact</a></li>
+			   <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
 			</ul>
 		  </div>
 		</div>
@@ -148,8 +148,8 @@
 					<span class="d-block mb-3 text-white text-capitalize">Small help can make change</span>
 					<h1 class="animated fadeInUp mb-4">Development through <br>selfless service</h1>
 					<p class="mb-4">Your small contribution means a lot. Natus officia amet hic  <br>accusamus repellat magni reprehenderit dolorem.</p>
-					<a href="https://demo.themefisher.com/wishfund/#" target="_blank" class="btn btn-main animated fadeInUp rounded">Become a Member</a>
-					<a href="https://demo.themefisher.com/wishfund/#" target="_blank" class="btn btn-main animated fadeInUp rounded">Donate Now</a>
+					<a href="#" target="_blank" class="btn btn-main animated fadeInUp rounded">Become a Member</a>
+					<a href="#" target="_blank" class="btn btn-main animated fadeInUp rounded">Donate Now</a>
 				</div>
 			</div>
 		</div>
@@ -403,7 +403,7 @@
 				      <img src="assets/img/51.png" class="img-fluid w-100" alt="..." style="width: 348px; height: 261px;">
 
 				      <div class="card-body">
-				        <h3 class="mb-3"><a href="https://demo.themefisher.com/wishfund/cause-single.html">Medical Assistance</a></h3>
+				        <h3 class="mb-3"><a href="#">Medical Assistance</a></h3>
 
 				         <ul class="list-inline border-bottom border-top py-3 ">
 				        	<li class="list-inline-item"><i class="fas fa-check text-color mr-2"></i>Goal:	<span>$890</span></li>
@@ -411,7 +411,7 @@
 				        </ul>
 				        <p class="card-text mb-4">Save poor child by supporting text below as a natural lead-in to additional content.</p>
 
-				        <a href="https://demo.themefisher.com/wishfund/donation.html" class="btn btn-main rounded">Donate Now</a>
+				        <a href="#" class="btn btn-main rounded">Donate Now</a>
 				      </div>
 				  </div>
 				</div>
@@ -423,14 +423,14 @@
 				      <img src="assets/img/52.jpg" class="img-fluid w-100" alt="..." style="width: 348px; height: 261px;">
 
 				      <div class="card-body">
-				        <h3 class="mb-3"><a href="https://demo.themefisher.com/wishfund/cause-single.html">Clean Drink Water</a></h3>
+				        <h3 class="mb-3"><a href="#">Clean Drink Water</a></h3>
 				         <ul class="list-inline border-bottom  border-top py-3">
 				        	<li class="list-inline-item"><i class="fas fa-check text-color mr-2"></i>Goal: <span>$890</span></li>
 				        	<li class="list-inline-item"><i class="fas fa-check text-color mr-2"></i>Raised: <span>$390</span></li>
 				        </ul>
 				        <p class="card-text mb-4">Save poor child by supporting text below as a natural lead-in to additional content. </p>
 
-				        <a href="https://demo.themefisher.com/wishfund/donation.html" class="btn btn-main rounded">Donate Now</a>
+				        <a href="#" class="btn btn-main rounded">Donate Now</a>
 				      </div>
 				  </div>
 				</div>
@@ -441,12 +441,12 @@
 				      <img src="assets/img/image-3.jpg" class="img-fluid w-100" alt="...">
 
 				      <div class="card-body">
-				        <h3 class="mb-3"><a href="https://demo.themefisher.com/wishfund/cause-single.html">Fund for Education</a></h3>
+				        <h3 class="mb-3"><a href="#">Fund for Education</a></h3>
 
 				        <p class="card-text mb-4">Save poor child by supporting text below as a natural lead-in to additional content. </p>
 				        <p>Quia vitae ab maxime cum quod neque .</p>
 
-				        <a href="https://demo.themefisher.com/wishfund/donation.html" class="btn btn-main rounded">Donate Now</a>
+				        <a href="#" class="btn btn-main rounded">Donate Now</a>
 				      </div>
 				  </div>
 				</div>
@@ -463,7 +463,7 @@
 				<div class="cta-content text-center">
 					<i class="fas fa-gem text-lg text-color"></i>
 					<h2 class="text-white text-lg mb-5 mt-3">We can’t help everyone, but everyone can help someone</h2>
-					<a href="https://demo.themefisher.com/wishfund/donation.html" class="btn btn-main rounded">Make a donation</a>
+					<a href="#" class="btn btn-main rounded">Make a donation</a>
 				</div>
 			</div>
 		</div>
@@ -488,7 +488,7 @@
 
 					<div class="card-body mt-2">
 						<span class="text-sm text-color text-uppercase font-weight-bold">January 3, 2019</span>
-						<h3 class="mb-3"><a href="https://demo.themefisher.com/wishfund/blog-single.html" class="">We can make a difference in families lives</a></h3>
+						<h3 class="mb-3"><a href="#" class="">We can make a difference in families lives</a></h3>
 						<p>Aspernatur obcaecati unde, quasi nihil neque, voluptatem. Consectetur.</p>
 					</div>
 				</div>
@@ -500,7 +500,7 @@
 
 					<div class="card-body mt-2">
 						<span class="text-sm text-color text-uppercase font-weight-bold">January 3, 2019</span>
-						<h3 class="mb-3"><a href="https://demo.themefisher.com/wishfund/blog-single.html" class="">A place where start new life with peace</a></h3>
+						<h3 class="mb-3"><a href="#" class="">A place where start new life with peace</a></h3>
 						<p>Aspernatur obcaecati unde, quasi nihil neque, voluptatem. Consectetur.</p>
 					</div>
 				</div>
@@ -512,7 +512,7 @@
 
 					<div class="card-body mt-2">
 						<span class="text-sm text-color text-uppercase font-weight-bold">January 3, 2019</span>
-						<h3 class="mb-3"><a href="https://demo.themefisher.com/wishfund/blog-single.html" class="">Build school for poor childrens</a></h3>
+						<h3 class="mb-3"><a href="#" class="">Build school for poor childrens</a></h3>
 						<p>Aspernatur obcaecati unde, quasi nihil neque, voluptatem. Consectetur.</p>
 					</div>
 				</div>
@@ -552,11 +552,11 @@
 				</div>
 			</div>
 
-			<div class="col-lg-5 col-md-12 col-sm-12">
+			<div class="col-lg-5 col-md-12 col-sm-12" id="be a Member">
 				<div class="volunteer-form-wrap">
 					<span class="text-white">Join Us</span>
 					<h2 class="mb-5 text-lg text-white">Become A Member</h2>
-					<form action="https://demo.themefisher.com/wishfund/#" class="volunteer-form">
+					<form action="#" class="volunteer-form">
 						<div class="form-group">
 							<input type="text" class="form-control" placeholder="Full Name">
 						</div>
@@ -576,7 +576,7 @@
 							<textarea name="#" id="#" cols="30" rows="6" class="form-control" placeholder="Your Message"></textarea>
 						</div>
 
-						<a href="https://demo.themefisher.com/wishfund/#" class="btn btn-main rounded mt-3">Send Message</a>
+						<a href="#" class="btn btn-main rounded mt-3">Send Message</a>
 					</form>
 				</div>
 			</div>
@@ -594,8 +594,8 @@
 					<p>Flat 20, Reynolds Neck, North <br>Helenaville, FV77</p>
 
 					<ul class="list-unstyled footer-menu mt-4">
-						<li><a href="https://demo.themefisher.com/wishfund/#"><i class="fas fa-phone text-color mr-2"></i>+2(305) 587-3407</a></li>
-						<li><a href="https://demo.themefisher.com/wishfund/#"><i class="fas fa-envelope text-color mr-2"></i> info@example.com</a></li>
+						<li><a href="#"><i class="fas fa-phone text-color mr-2"></i>+2(305) 587-3407</a></li>
+						<li><a href="#"><i class="fas fa-envelope text-color mr-2"></i> info@example.com</a></li>
 					</ul>
 					<ul class="list-inline footer-socials">
 						<li class="list-inline-item"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -610,10 +610,10 @@
 					<h4 class="text-capitalize mb-4 text-white">Quick Links</h4>
 
 					<ul class="list-unstyled footer-menu lh-35">
-						<li><a href="https://demo.themefisher.com/wishfund/#">About</a></li>
-						<li><a href="https://demo.themefisher.com/wishfund/#">Services</a></li>
-						<li><a href="https://demo.themefisher.com/wishfund/#">Team</a></li>
-						<li><a href="https://demo.themefisher.com/wishfund/#">Contact</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Services</a></li>
+						<li><a href="#">Team</a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</div>
 			</div>
