--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 			</div>
 		</div>
 		  <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarsExample09" aria-controls="navbarsExample09" aria-expanded="false" aria-label="Toggle navigation">
-			<span class="ti-menu"></span>
+			<i class="fa fa-bars" aria-hidden="true"></i>
 		  </button>
 
 		  <div class="collapse navbar-collapse text-center" id="navbarsExample09">
