--- a/index.html
+++ b/index.html
@@ -532,19 +532,19 @@
 
 					<!-- <h2 class="mt-5 mb-4">Trusted worldwide partner</h2>
 					<div class="clients-wrap">
-						<a href="https://demo.themefisher.com/wishfund/#">
+						<a href="#">
 							<img src="assets/img/client1.png" alt="" class="img-fluid">
 						</a>
-						<a href="https://demo.themefisher.com/wishfund/#">
+						<a href="#">
 							<img src="assets/img/client2.png" alt="" class="img-fluid">
 						</a>
-						<a href="https://demo.themefisher.com/wishfund/#">
+						<a href="#">
 							<img src="assets/img/client4.png" alt="" class="img-fluid">
 						</a>
-						<a href="https://demo.themefisher.com/wishfund/#">
+						<a href="#">
 							<img src="assets/img/client5.png" alt="" class="img-fluid">
 						</a>
-						<a href="https://demo.themefisher.com/wishfund/#">
+						<a href="#">
 							<img src="assets/img/client6.png" alt="" class="img-fluid">
 						</a>
 					</div> -->
