image link fixed

--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
 			<div class="col-lg-4">
 				<div class="card mb-3 cause-item">
 				  <div class="row no-gutters">
-				      <img src="assets/img/51.png" class="img-fluid w-100" alt="..." style="width: 348px; height: 261px;">
+				      <img src="assets/img/51.PNG" class="img-fluid w-100" alt="..." style="width: 348px; height: 261px;">
 
 				      <div class="card-body">
 				        <h3 class="mb-3"><a href="#">Medical Assistance</a></h3>
